tests/test118.rael.exp
Error [tests/test118.rael:1:7]: Division by zero
| log 4 % 0
|       ^
